<?xml version="1.0"?>
<package format="2">
  <name>jitbus</name>
  <version>0.0.0</version>
  <description>The jitbus package</description>

  <maintainer email="roboticarts1@gmail.com">Robert Vasquez Zavaleta</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>serial</depend>

</package>
